--- a/semi/.classpath
+++ b/semi/.classpath
@@ -13,5 +13,9 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
+	<classpathentry kind="lib" path="C:/Users/user2/git/gongbangsingi/semi/WebContent/WEB-INF/lib/cos.jar"/>
+	<classpathentry kind="lib" path="C:/Users/user2/git/gongbangsingi/semi/WebContent/WEB-INF/lib/gson-2.8.5.jar"/>
+	<classpathentry kind="lib" path="C:/Users/user2/git/gongbangsingi/semi/WebContent/WEB-INF/lib/json-simple-1.1.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/user2/git/gongbangsingi/semi/WebContent/WEB-INF/lib/ojdbc6.jar"/>
 	<classpathentry kind="output" path="WebContent/WEB-INF/classes"/>
 </classpath>
