--- a/semi/src/sql/workshop/shop-query.properties
+++ b/semi/src/sql/workshop/shop-query.properties
@@ -1,2 +1,3 @@
 #shop-query.properties
-selectShopList=SELECT * FROM WORKSHOP;
+#String wsNo, String wsName, String address, String wsTel, String category, double grade
+selectShopList=SELECT wsNo,wsName,address,wstel, category, avg(grade)FROM WORKSHOP;
