--- a/semi/src/sql/notice/notice-query.properties
+++ b/semi/src/sql/notice/notice-query.properties
@@ -4,3 +4,4 @@ insertNotice=INSERT INTO NOTICE VALUES(SEQ_NNO.NEXTVAL, ?, ?, ?, DEFAULT, SYSDAT
 increaseCount=UPDATE NOTICE SET NCOUNT = NCOUNT + 1 WHERE NNO=?
 selectNotice=SELECT * FROM NOTICE WHERE NNO=?
 deleteNotice=DELETE FROM NOTICE WHERE NNO=?
+updateNotice=UPDATE NOTICE SET NTITLE=?, NCONTENT=? WHERE NNO=?
