--- a/semi/src/sql/review/review-query.properties
+++ b/semi/src/sql/review/review-query.properties
@@ -1,2 +1,4 @@
 #review-query.properties
 #getListCount=SELECT COUNT(*) FROM BOARD WHERE STATUS='Y' AND BTYPE=1
+getListCount=SELECT COUNT(*) FROM REVIEW JOIN WORK_CLASS USING(WC_NO) WHERE WS_NO = ?;
+selectList_shop=SELECT * FROM RLIST WHERE (RNUM BETWEEN ? AND ?) and WS_NO=? ;
