--- a/semi/src/sql/workshop/shop-query.properties
+++ b/semi/src/sql/workshop/shop-query.properties
@@ -2,3 +2,4 @@
 #String wsNo, String wsName, String address, String wsTel, String category, double grade
 selectShopList=SELECT ws_No,ws_Name,WS_addr,ws_tel, WS_category, (SELECT avg(R_grade)FROM WORK_CLASS WHERE )J;
 selectShop=SELECT WSNO,wsNAME,ADDRESS,WSTEL,CATEGORY,AVG
+updateThumbnail=INSERT INTO ATTACHMENT VALUES(SEQ_FID.NEXTVAL, SEQ_BID.CURRVAL, ?, ?, ?, SYSDATE, ?, DEFAULT, DEFAULT)
