--- a/semi/src/sql/workclass/workclass-query.properties
+++ b/semi/src/sql/workclass/workclass-query.properties
@@ -3,3 +3,6 @@ insertWorkClass=insert into work_class values('wcNo' || WCNO_SEQ.NEXTVAL,?,?,?,0
 selectWcNo=select WC_NO from work_class where wc_name LIKE '%' || ? || '%'
 insertClassTime=insert into class_time values('ctNo' || CTNO_SEQ.NEXTVAL ,?,?,?,?,?)
 insertFile=insert into file_storage values('fsNo' || FSNO_SEQ.NEXTVAL ,?,?,?,?,?)
+insertReview=insert into review values('rNo' || RNO_SEQ.NEXTVAL,?,?,SYSDATE,?,DEFAULT,?,?)
+insertReviewFile=insert into file_storage values('fsNo' || FSNO_SEQ.NEXTVAL,?,?,?,100,?)
+selectRNo=select r_no from review where r_title like '%' || ? || '%' and wc_no = ?
