--- a/semi/src/sql/workshop/shop-query.properties
+++ b/semi/src/sql/workshop/shop-query.properties
@@ -1,14 +1,16 @@
 #shop-query.properties
-#String wsNo, String wsName, String address, String wsTel, String category, double grade
-selectShopList=SELECT WS_NO,WS_NAME,WS_ADDR,WS_TEL, WS_CATEGORY,ROUND(AVG(g),1) FROM (select WS_NO,WC_NO,ROUND(AVG(R_GRADE),1) as g from review join WORK_CLASS using(WC_NO) group by WC_NO,WS_NO) JOIN WORKSHOP USING(WS_NO) GROUP BY WS_NO,WS_NAME,WS_ADDR,WS_TEL, WS_CATEGORY
-selectShop=SELECT WS_NO,WS_NAME,WS_ADDR,WS_TEL, WS_CATEGORY,ROUND(AVG(R_GRADE),1) FROM WORKSHOP JOIN WORK_CLASS c USING(WS_NO) JOIN REVIEW r ON(c.WC_NO=r.WC_NO) WHERE WS_NO= ?
+selectShopList=SELECT * FROM SHOPLIST
+selectSortPoplist=SELECT * FROM SHOPLIST ORDER BY(SELECT COUNT(WC_NO) FROM RESERVATION) DESC 
+selectSortNewlist=SELECT * FROM SHOPLIST JOIN WORKSHOP USING(WS_NO) ORDER BY WS_ENROLLDATE DESC
+selectShop=SELECT s.WS_NO,s.WS_NAME,WS_ADDR,WS_TEL, s.WS_CATEGORY,sg,WS_SNS, C_ID,s.WS_Introduce FROM SHOPLIST l JOIN WORKSHOP s ON(s.WS_NO=l.WS_NO) WHERE s.WS_NO = ?
 selectThumbnail=SELECT * FROM FILE_STORAGE WHERE FS_DESTINATION=?
 insertThumbnail=INSERT INTO FILE_STORAGE VALUES(SEQ_FSNO.NEXTVAL, ?, ?, ?, ?)
 updateThumbnail=UPDATE FILE_STORAGE SET FS_ORIGINAL_FILE= ?, FS_RENAME_FILE=? FS_PATH= ? WHERE FS_DESTINATION=?
 updateIntro=UPDATE WORKSHOP SET WS_Introduce= ? WHERE WS_NO=?
 #
 getListCount=SELECT COUNT(*) FROM REVIEW JOIN WORK_CLASS USING(WC_NO) WHERE WS_NO = ?
-#selectList_shop=SELECT * FROM RLIST WHERE WS_NO=? 
+#selectReviewList_shop=SELECT * FROM RLIST WHERE WS_NO=? 
 selectReviewLIst=SELECT * FROM RLIST WHERE WS_NO=? AND RNUM BETWEEN ? AND ?
 selectClassLIst=SELECT * FROM WORK_CLASS WHERE WS_NO=?
-selectPictures=SELECT * FROM FILE_STORAGE WHERE FS_DESTINATION EXISTS(SELECT WC_NO FORM WORK_CLASS WHERE c.WS_NO=?)
+selectClassPictures=SELECT * FROM FILE_STORAGE WHERE FS_DESTINATION EXISTS(SELECT WC_NO FORM WORK_CLASS WHERE c.WS_NO=?)
+selectShopListPictures=SELECT * FROM FILE_STORAGE WHERE FS_DESTINATION LIKE 'WS%'
