--- a/semi/src/sql/workclass/workclass-query.properties
+++ b/semi/src/sql/workclass/workclass-query.properties
@@ -6,3 +6,6 @@ insertFile=insert into file_storage values('fsNo' || FSNO_SEQ.NEXTVAL ,?,?,?,?,?
 insertReview=insert into review values('rNo' || RNO_SEQ.NEXTVAL,?,?,SYSDATE,?,DEFAULT,?,?)
 insertReviewFile=insert into file_storage values('fsNo' || FSNO_SEQ.NEXTVAL,?,?,?,100,?)
 selectRNo=select r_no from review where r_title like '%' || ? || '%' and wc_no = ?
+selectWorkClass=select * from work_class where wc_no = ?
+selectClassFile=select * from file_storage where fs_destination = ?
+selectClassTime=select * from class_time where wc_no = ?
