--- a/semi/src/sql/workshop/shop-query.properties
+++ b/semi/src/sql/workshop/shop-query.properties
@@ -12,3 +12,4 @@ selectReviewLIst=SELECT * FROM RLIST WHERE WS_NO=?
 selectClassLIst=SELECT * FROM WORK_CLASS WHERE WS_NO=?
 selectClassPictures=SELECT * FROM FILE_STORAGE WHERE FS_DESTINATION IN(SELECT WC_NO FROM WORK_CLASS c WHERE c.WS_NO=?)
 selectShopListPictures=SELECT * FROM FILE_STORAGE WHERE FS_DESTINATION LIKE 'WS%'
+selectedCategory=SELECT * FROM SHOPLIST WHERE S_CATEGORY=?
