--- a/semi/src/sql/notice/notice-query.properties
+++ b/semi/src/sql/notice/notice-query.properties
@@ -1,10 +1,10 @@
 #notice
-selectList=SELECT * FROM NOTICE ORDER BY NNO DESC
-insertNotice=INSERT INTO NOTICE VALUES(SEQ_NNO.NEXTVAL, ?, ?, DEFAULT, SYSDATE)
-increaseCount=UPDATE NOTICE SET NCOUNT = NCOUNT + 1 WHERE NNO=?
-selectNotice=SELECT * FROM NOTICE WHERE NNO=?
-deleteNotice=DELETE FROM NOTICE WHERE NNO=?
-updateNotice=UPDATE NOTICE SET NTITLE=?, NCONTENT=? WHERE NNO=?
-searchTitleList=SELECT * FROM NOTICE WHERE NTITLE LIKE '%' || ? || '%' ORDER BY NNO DESC
-searchContentList=SELECT * FROM NOTICE WHERE NCONTENT LIKE '%' || ? || '%' ORDER BY NNO DESC
+selectList=SELECT * FROM NOTICE ORDER BY N_NO DESC
+insertNotice=INSERT INTO NOTICE VALUES('nNo'||SEQ_NNO.NEXTVAL, ?, ?,  SYSDATE,DEFAULT)
+increaseCount=UPDATE NOTICE SET N_COUNT = N_COUNT + 1 WHERE N_NO=?
+selectNotice=SELECT * FROM NOTICE WHERE N_NO=?
+deleteNotice=DELETE FROM NOTICE WHERE N_NO=?
+updateNotice=UPDATE NOTICE SET N_TITLE=?, N_CONTENT=? WHERE N_NO=?
+searchTitleList=SELECT * FROM NOTICE WHERE N_TITLE LIKE '%' || ? || '%' ORDER BY N_NO DESC
+searchContentList=SELECT * FROM NOTICE WHERE N_CONTENT LIKE '%' || ? || '%' ORDER BY N_NO DESC
 getListCount=SELECT COUNT(*) FROM NOTICE
