--- a/semi/WebContent/WEB-INF/classes/sql/qna/qna-query.properties
+++ b/semi/WebContent/WEB-INF/classes/sql/qna/qna-query.properties
@@ -1,2 +1,4 @@
 selectList=SELECT * FROM QNA
-insertQna=INSERT INTO QNA VALUES(SEQ_QNO.NEXTVAL, ?, ?,?, SYSDATE,?,DEFAULT,?,DEFAULT,?)
+insertQna=INSERT INTO QNA VALUES('Qno' ||SEQ_QNO.NEXTVAL, ?, ?,?, SYSDATE,?,DEFAULT,?,DEFAULT,?)
+increaseCount=UPDATE QNA SET Q_COUNT = Q_COUNT + 1 WHERE Q_NO=?
+selectQna=SELECT * FROM QNA WHERE Q_NO=?
