--- a/semi/src/sql/qna/qna-query.properties
+++ b/semi/src/sql/qna/qna-query.properties
@@ -2,3 +2,4 @@ selectList=SELECT * FROM QNA
 insertQna=INSERT INTO QNA VALUES('Qno' ||SEQ_QNO.NEXTVAL, ?, ?,?, SYSDATE,?,DEFAULT,?,DEFAULT,?)
 increaseCount=UPDATE QNA SET Q_COUNT = Q_COUNT + 1 WHERE Q_NO=?
 selectQna=SELECT * FROM QNA WHERE Q_NO=?
+deleteQna=DELETE FROM QNA WHERE Q_NO=?
