--- a/semi/src/sql/qna/qna-query.properties
+++ b/semi/src/sql/qna/qna-query.properties
@@ -1,5 +1,9 @@
-selectList=SELECT * FROM QNA
+selectList=SELECT * FROM BLIST WHERE RNUM BETWEEN ? AND ?
 insertQna=INSERT INTO QNA VALUES('Qno' ||SEQ_QNO.NEXTVAL, ?, ?,?, SYSDATE,?,DEFAULT,?,DEFAULT,?)
 increaseCount=UPDATE QNA SET Q_COUNT = Q_COUNT + 1 WHERE Q_NO=?
 selectQna=SELECT * FROM QNA WHERE Q_NO=?
 deleteQna=DELETE FROM QNA WHERE Q_NO=?
+updateQna=UPDATE QNA  SET Q_TITLE=?, Q_CONTENT=? WHERE Q_NO=?
+searchTitleList=SELECT * FROM QNA WHERE Q_TITLE LIKE '%' || ? || '%' 
+searchContentList=SELECT * FROM QNA WHERE Q_CONTENT LIKE '%' || ? || '%'
+getListCount=SELECT COUNT(*) FROM QNA
