--- a/semi/WebContent/WEB-INF/classes/sql/workshop/shop-query.properties
+++ b/semi/WebContent/WEB-INF/classes/sql/workshop/shop-query.properties
@@ -14,4 +14,4 @@ selectClassPictures=SELECT * FROM FILE_STORAGE WHERE FS_DESTINATION IN(SELECT WC
 selectShopListPictures=SELECT * FROM FILE_STORAGE WHERE FS_DESTINATION LIKE 'ws%'
 selectedCategory=SELECT * FROM SHOPLIST WHERE S_CATEGORY IN (?)
 selectCSortPoplist=SELECT * FROM SHOPLIST WHERE S_CATEGORY=? ORDER BY(SELECT COUNT(WC_NO) FROM RESERVATION) DESC 
-selectCSortNewlist=SELECT * FROM SHOPLIST JOIN WORKSHOP USING(WS_NO) WHERE S_CATEGORY=? ORDER BY WS_ENROLLDATE DESC
+selectCSortNewlist=SELECT * FROM SHOPLIST JOIN WORKSHOP s USING(WS_NO) WHERE s.S_CATEGORY=? ORDER BY WS_ENROLLDATE DESC
