--- a/semi/src/sql/workshop/shop-query.properties
+++ b/semi/src/sql/workshop/shop-query.properties
@@ -12,6 +12,6 @@ selectReviewLIst=SELECT * FROM RLIST WHERE WS_NO=?
 selectClassLIst=SELECT * FROM WORK_CLASS WHERE WS_NO=?
 selectClassPictures=SELECT * FROM FILE_STORAGE WHERE FS_DESTINATION IN(SELECT WC_NO FROM WORK_CLASS c WHERE c.WS_NO=?)
 selectShopListPictures=SELECT * FROM FILE_STORAGE WHERE FS_DESTINATION LIKE 'ws%'
-selectedCategory=SELECT * FROM SHOPLIST WHERE S_CATEGORY IN (?)
-selectCSortPoplist=SELECT * FROM SHOPLIST WHERE S_CATEGORY=? ORDER BY(SELECT COUNT(WC_NO) FROM RESERVATION) DESC 
-selectCSortNewlist=SELECT * FROM SHOPLIST JOIN WORKSHOP s USING(WS_NO) WHERE s.S_CATEGORY=? ORDER BY WS_ENROLLDATE DESC
+#selectedCategory=SELECT * FROM SHOPLIST WHERE S_CATEGORY IN (?)
+#selectCSortPoplist=SELECT * FROM SHOPLIST WHERE S_CATEGORY=? ORDER BY(SELECT COUNT(WC_NO) FROM RESERVATION) DESC 
+#selectCSortNewlist=SELECT * FROM SHOPLIST JOIN WORKSHOP s USING(WS_NO) WHERE s.S_CATEGORY=? ORDER BY WS_ENROLLDATE DESC
