--- a/semi/src/sql/notice/notice-query.properties
+++ b/semi/src/sql/notice/notice-query.properties
@@ -8,3 +8,4 @@ updateNotice=UPDATE NOTICE SET N_TITLE=?, N_CONTENT=? WHERE N_NO=?
 searchTitleList=SELECT * FROM NOTICE WHERE N_TITLE LIKE '%' || ? || '%' ORDER BY N_NO DESC
 searchContentList=SELECT * FROM NOTICE WHERE N_CONTENT LIKE '%' || ? || '%' ORDER BY N_NO DESC
 getListCount=SELECT COUNT(*) FROM NOTICE
+selectList3=SELECT * FROM NLIST WHERE RNUM BETWEEN ? AND ?
