--- a/semi/src/sql/qna/qna-query.properties
+++ b/semi/src/sql/qna/qna-query.properties
@@ -8,3 +8,5 @@ searchTitleList=SELECT * FROM QNA WHERE Q_TITLE LIKE '%' || ? || '%'
 searchContentList=SELECT * FROM QNA WHERE Q_CONTENT LIKE '%' || ? || '%'
 getListCount=SELECT COUNT(*) FROM QNA
 searchMem=SELECT * FROM QNA WHERE Q_CID LIKE '%' || ? || '%'
+selectReplyList=SELECT * FROM RLIST WHERE REF_BID =?
+insertReply=INSERT INTO QnaRe VALUES(SEQ_RID.NEXTVAL, ?, ?, ?, SYSDATE, SYSDATE, DEFAULT)
