--- a/semi/WebContent/WEB-INF/classes/.gitignore
+++ b/semi/WebContent/WEB-INF/classes/.gitignore
@@ -1,3 +1,15 @@
-/qna/
-/sql/
+/attachment/
+/business_mypage/
+/common/
+/mail/
+/member/
+/mypage/
 /notice/
+/payment/
+/qna/
+/reservation/
+/review/
+/search/
+/sql/
+/workclass/
+/workshop/
