--- a/semi/src/sql/b_mypage/Bmypage-quert.properties
+++ b/semi/src/sql/b_mypage/Bmypage-quert.properties
@@ -1,3 +1,4 @@
-selectList= select r.res_date, c.c_name, w.wc_name, r.res_nop, r.total_price, r.res_state from client c, reservation r , work_class w where ws_no = ? order by res_date;
+selectList= select r.res_date, c.c_name, w.wc_name, r.res_nop, r.total_price, r.res_state from client c, reservation r , work_class w where ws_no = ? order by res_date
 selectReview = select c.c_name, w.wc_name, r.r_title, r.r_content, r.r_ent_date, r.r_grade , s.ws_no from review r, work_class w, workshop s, client c where r.wc_no = w.wc_no and w.ws_no = s.ws_no and s.ws_no = ?
-selectQNA = select c.c_name,  q.q_title, q.q_content, q.q_ent_date, q.q_replay_ck from client c , qna q join work_class using(wc_no) join workshop using(ws_no) where ws_no = ? order by q_ent_date;
+selectQNA = select c.c_name,  q.q_title, q.q_content, q.q_ent_date, q.q_replay_ck from client c , qna q join work_class using(wc_no) join workshop using(ws_no) where ws_no = ? order by q_ent_date
+purchaseMuch = select sum(total_price) from reservation where ws_no = ?
