--- a/semi/src/sql/workshop/shop-query.properties
+++ b/semi/src/sql/workshop/shop-query.properties
@@ -2,7 +2,7 @@
 selectShopList=SELECT * FROM SHOPLIST
 selectSortPoplist=SELECT * FROM SHOPLIST ORDER BY(SELECT COUNT(WC_NO) FROM RESERVATION) DESC 
 selectSortNewlist=SELECT * FROM SHOPLIST JOIN WORKSHOP USING(WS_NO) ORDER BY WS_ENROLLDATE DESC
-selectShop=SELECT s.WS_NO,s.WS_NAME,s.WS_ADDR,WS_TEL,s.S_CATEGORY,sg,WS_SNS, C_ID,s.WS_Introduce,s.WS_ENROLLDATE FROM SHOPLIST l JOIN WORKSHOP s ON(s.WS_NO=l.WS_NO) WHERE s.WS_NO = ?
+selectShop=SELECT s.WS_NO,s.WS_NAME,s.WS_ADDR,WS_TEL,s.S_CATEGORY,sg,WS_SNS, s.C_ID,s.WS_Introduce,s.WS_ENROLLDATE, C_NAME,WS_ACCNUM FROM SHOPLIST l JOIN WORKSHOP s ON(s.WS_NO=l.WS_NO) JOIN CLIENT c ON(s.C_ID=c.C_ID) WHERE s.WS_NO = ?
 selectThumbnail=SELECT * FROM FILE_STORAGE WHERE FS_DESTINATION=?
 insertThumbnail=INSERT INTO FILE_STORAGE VALUES('fsNo' || FSNO_SEQ.NEXTVAL, ?, ?, ?,1, ?)
 updateThumbnail=UPDATE FILE_STORAGE SET FS_ORIGINAL_FILE= ?, FS_RENAME_FILE=?, FS_PATH=? WHERE FS_DESTINATION=?
