--- a/semi/src/sql/notice/notice-query.properties
+++ b/semi/src/sql/notice/notice-query.properties
@@ -5,7 +5,8 @@ increaseCount=UPDATE NOTICE SET N_COUNT = N_COUNT + 1 WHERE N_NO=?
 selectNotice=SELECT * FROM NOTICE WHERE N_NO=?
 deleteNotice=DELETE FROM NOTICE WHERE N_NO=?
 updateNotice=UPDATE NOTICE SET N_TITLE=?, N_CONTENT=? WHERE N_NO=?
-searchTitleList=SELECT * FROM NOTICE WHERE N_TITLE LIKE '%' || ? || '%' ORDER BY N_NO DESC
-searchContentList=SELECT * FROM NOTICE WHERE N_CONTENT LIKE '%' || ? || '%' ORDER BY N_NO DESC
 getListCount=SELECT COUNT(*) FROM NOTICE
 selectList3=SELECT * FROM NLIST WHERE RNUM BETWEEN ? AND ?
+
+searchTitleList=SELECT * FROM NLIST WHERE RNUM BETWEEN ? AND ? AND N_TITLE LIKE '%' || ? || '%' 
+searchContentList=SELECT * FROM NLIST WHERE RNUM BETWEEN ? AND ? AND N_CONTENT LIKE '%' || ? || '%' 
