--- a/semi/src/sql/qna/qna-query.properties
+++ b/semi/src/sql/qna/qna-query.properties
@@ -4,8 +4,9 @@ increaseCount=UPDATE QNA SET Q_COUNT = Q_COUNT + 1 WHERE Q_NO=?
 selectQna=SELECT * FROM QNA WHERE Q_NO=?
 deleteQna=DELETE FROM QNA WHERE Q_NO=?
 updateQna=UPDATE QNA  SET Q_TITLE=?, Q_CONTENT=? WHERE Q_NO=?
-searchTitleList=SELECT * FROM QNA WHERE Q_TITLE LIKE '%' || ? || '%' 
-searchContentList=SELECT * FROM QNA WHERE Q_CONTENT LIKE '%' || ? || '%'
 getListCount=SELECT COUNT(*) FROM QNA
-searchMem=SELECT * FROM QNA WHERE Q_CID LIKE '%' || ? || '%'
+
+searchTitleList=SELECT * FROM BLIST WHERE RNUM BETWEEN ? AND ? AND Q_TITLE LIKE '%' || ? || '%' 
+searchWriterList=SELECT * FROM BLIST WHERE RNUM BETWEEN ? AND ? AND C_ID LIKE '%' || ? || '%'
+
 
