--- a/semi/src/sql/workclass/workclass-query.properties
+++ b/semi/src/sql/workclass/workclass-query.properties
@@ -1,5 +1,5 @@
 #workclass-query.properties
-insertWorkClass=insert into work_class values('wcNo' || WCNO_SEQ.NEXTVAL,?,?,?,0,default,?,0,?,?)
+insertWorkClass=insert into work_class values('wcNo' || WCNO_SEQ.NEXTVAL,?,?,?,?,default,?,0,?,?)
 selectWcNo=select WC_NO from work_class where wc_name LIKE '%' || ? || '%'
 insertClassTime=insert into class_time values('ctNo' || CTNO_SEQ.NEXTVAL ,?,?,?,?,?)
 insertFile=insert into file_storage values('fsNo' || FSNO_SEQ.NEXTVAL ,?,?,?,?,?)
