--- a/semi/src/sql/qna/qna-query.properties
+++ b/semi/src/sql/qna/qna-query.properties
@@ -9,4 +9,5 @@ getListCount=SELECT COUNT(*) FROM QNA
 searchTitleList=SELECT * FROM BLIST WHERE RNUM BETWEEN ? AND ? AND Q_TITLE LIKE '%' || ? || '%' 
 searchWriterList=SELECT * FROM BLIST WHERE RNUM BETWEEN ? AND ? AND C_ID LIKE '%' || ? || '%'
 
+selectReplyList=SELECT * FROM REPLY_QNA WHERE Q_NO =?
 
