--- a/semi/WebContent/WEB-INF/classes/.gitignore
+++ b/semi/WebContent/WEB-INF/classes/.gitignore
@@ -1,1 +1,16 @@
+/attachment/
+/business_mypage/
+/common/
+/jjim/
+/mail/
+/member/
+/mypage/
+/notice/
+/payment/
 /qna/
+/reservation/
+/review/
+/search/
+/sql/
+/workclass/
+/workshop/
