--- a/semi/src/sql/mypage/mypage-query.properties
+++ b/semi/src/sql/mypage/mypage-query.properties
@@ -1,11 +1,11 @@
 selectList=SELECT * FROM RESERVATION R JOIN WORK_CLASS USING(WC_NO) JOIN WORKSHOP USING(WS_NO) WHERE R.C_ID = ? ORDER BY RES_DATE
-selectQNA = SELECT * FROM QNA WHERE C_ID = ? ORDER BY Q_ENT_DATE
 selectReview = SELECT * FROM REVIEW JOIN WORK_CLASS USING(WC_NO) WHERE C_ID = ? ORDER BY R_ENT_DATE
+selectQNA = SELECT c_name,q_title,q_content,q_ent_date,q_replay_ck FROM client join qna using(c_id) WHERE C_ID = ? ORDER BY Q_ENT_DATE
 deleteMember = DELETE FROM CLIENT WHERE C_ID = ?
 deleteReservation = DELETE FROM RESERVATION WHERE C_ID = ? AND RES_CODE = ?
 purchaseMuch = select sum(total_price) from reservation where c_id = ?
-
 SelectJjim = select * from jjim join work_class using(wc_no) where c_id = ?
+updatePwd = update client set c_pw = ? where c_id = ?
 
 InsertUpNtoB = insert into workshop values (ws1,?,?,?,N,SYSDATE,null,?,null,?,null,?)
 
