--- a/semi/src/sql/b_mypage/Bmypage-query.properties
+++ b/semi/src/sql/b_mypage/Bmypage-query.properties
@@ -1,6 +1,6 @@
 selectList= select r.res_date, c.c_name, w.wc_name, r.res_nop, r.total_price, r.res_state from client c join reservation r using(c_id) join work_class w using(wc_no) where ws_no = ? order by res_date
 selectReview = select c.c_name, w.wc_name, r.r_title, r.r_content, r.r_ent_date, r.r_grade from client c join review r using(c_id) join work_class w using(wc_no) where ws_no = ?
 selectQNA = select c.c_name,  q.q_title, q.q_content, q.q_ent_date, q.q_replay_ck from client c join qna q using(c_id) join work_class using(wc_no) join workshop using(ws_no) where ws_no=? order by q_ent_date
-purchaseMuch = select sum(total_price) from reservation where ws_no = ?
+purchaseMuch = select sum(total_price) from reservation join work_class w using(wc_no) where w.ws_no = ?
 selectProgress = select count(*) from reservation , workshop where res_date > sysdate and ws_no = ?
 updateAddress = update workshop set ws_addr = ? where ws_no = ?
